
2009-02-16 François Agrech <f.agrech@gmail.com>
	* Version 0.3.3
	* I18n
	* L10n en français
	* Add icon to main window and preferences dialog

2009-03-16 François Agrech <f.agrech@gmail.com>
	* Version 0.4.0
	* Rebrand super key with florence smile
	* Change xml parsing method from sequential reader to DOM
	* Get rid of hitmap
	* Add window opacity configuration parameter
	* Implement tabs in settings dialog and add relevant parameters
	* Add move_to_widget settings option
	* Add intermediate icon option
	* Many bug fixes (mainly concerning auto-hide)

2009-04-03 François Agrech <f.agrech@gmail.com>
	* Version 0.4.1
	* Add a startup notification message
	* Apply style and window opacity immediately
	* Fix minor memory leak
	* Set static gravity for window
	* Listen to keyboard device events to update the status
	* i18n and l10n in french of key labels

2009-05-20 François Agrech <f.agrech@gmail.com>
	* Version 0.4.2
	* Make xkb optional
	* Make at-spi optional
	* Add a new keyboard layout (compact)
	* Many bug fixes

2009-07-28 François Agrech <f.agrech@gmail.com>
	* Version 0.4.3
	* Implement action keys
	* Bug fixes

2009-09-07 François Agrech <f.agrech@gmail.com>
	* Version 0.4.4
	* Remove dependancy on libgnome (obsolete) ; add gnome-doc-utils instead.
	* Make intermediate icon transparent.
	* Remove buggy hacks for XRECORD and add warning for the new Xorg.
	* Add --without-xrecord configure option
	* Fix high CPU workload problem.
	* Listen to gdk keys-changed event.

2009-11-03 François Agrech <f.agrech@gmail.com>
	* Version 0.4.5
	* Add hard coded default settings
	* Add the --no-gnome runtime option
	* add settings-window source file for better readability
	* add the --use-config option
	* restart the auto-click timer after timeout trigger
	* add the window/keep_on_top parameter
	* add the --focus option
	* add the focus_zoom parameter
	* bug fixes

2009-11-26 François Agrech <f.agrech@gmail.com>
	* Version 0.4.6
	* redesign status with a FSM table